@@ -23,29 +23,25 @@
  */
 package hudson.util;
 
-import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.List;
 import java.util.stream.Stream;
 import org.apache.maven.artifact.versioning.ComparableVersion;
 import org.apache.maven.artifact.versioning.DefaultArtifactVersion;
-import org.hamcrest.CoreMatchers;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertTrue;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ErrorCollector;
+
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 
-public class VersionNumberTest {
-
-    @Rule
-    public ErrorCollector errors = new ErrorCollector();
+class VersionNumberTest {
 
     @Test
-    public void isNewerThan() {
+    void isNewerThan() {
        assertTrue(new VersionNumber("2.0.*").isNewerThan(new VersionNumber("2.0")));
        assertTrue(new VersionNumber("2.1-SNAPSHOT").isNewerThan(new VersionNumber("2.0.*")));
        assertTrue(new VersionNumber("2.1").isNewerThan(new VersionNumber("2.1-SNAPSHOT")));
@@ -62,20 +58,20 @@ public class VersionNumberTest {
 
     @Issue("https://gitter.im/jenkinsci/configuration-as-code-plugin?at=5b4f2fc455a7e23c014da2af")
     @Test
-    public void alpha() {
+    void alpha() {
        assertTrue(new VersionNumber("2.0").isNewerThan(new VersionNumber("2.0-alpha-1")));
        assertTrue(new VersionNumber("2.0-alpha-1").isNewerThan(new VersionNumber("2.0-alpha-1-rc9999.abc123def456")));
     }
-    
+
     @Test
-    public void earlyAccess() {
+    void earlyAccess() {
        assertTrue(new VersionNumber("2.0.ea2").isNewerThan(new VersionNumber("2.0.ea1")));
        assertTrue(new VersionNumber("2.0.ea1").isNewerThan(new VersionNumber("2.0.ea")));
        assertEquals(new VersionNumber("2.0.ea"), new VersionNumber("2.0.ea0"));
     }
-    
+
     @Test
-    public void snapshots() {
+    void snapshots() {
         assertTrue(new VersionNumber("1.12").isNewerThan(new VersionNumber("1.12-SNAPSHOT (private-08/24/2008 12:13-hudson)")));
         assertTrue(new VersionNumber("1.12-SNAPSHOT (private-08/24/2008 12:13-hudson)").isNewerThan(new VersionNumber("1.11")));
         assertEquals(new VersionNumber("1.12-SNAPSHOT (private-08/24/2008 12:13-hudson)"), new VersionNumber("1.12-SNAPSHOT"));
@@ -88,7 +84,7 @@ public class VersionNumberTest {
     }
 
     @Test
-    public void timestamps() {
+    void timestamps() {
         assertTrue(new VersionNumber("2.0.3-20170207.105042-1").isNewerThan(new VersionNumber("2.0.2")));
         assertTrue(new VersionNumber("2.0.3").isNewerThan(new VersionNumber("2.0.3-20170207.105042-1")));
         assertEquals(new VersionNumber("2.0.3-20170207.105042-1"), new VersionNumber("2.0.3-SNAPSHOT"));
@@ -101,7 +97,7 @@ public class VersionNumberTest {
     }
 
     @Test
-    public void digit() {
+    void digit() {
         assertEquals(32, new VersionNumber("2.32.3.1-SNAPSHOT").getDigitAt(1));
         assertEquals(3, new VersionNumber("2.32.3.1-SNAPSHOT").getDigitAt(2));
         assertEquals(1, new VersionNumber("2.32.3.1-SNAPSHOT").getDigitAt(3));
@@ -117,27 +113,28 @@ public class VersionNumberTest {
         assertEquals(-1, new VersionNumber("").getDigitAt(0));
     }
 
-    private void assertOrderAlsoInMaven(String... versions) {
-        errors.checkThat("Maven order is correct", Stream.of(versions).map(ComparableVersion::new).sorted().map(ComparableVersion::toString).collect(Collectors.toList()), CoreMatchers.is(Arrays.asList(versions)));
-        errors.checkThat("Jenkins order is correct", Stream.of(versions).map(VersionNumber::new).sorted().map(VersionNumber::toString).collect(Collectors.toList()), CoreMatchers.is(Arrays.asList(versions)));
+    private static void assertOrderAlsoInMaven(String... versions) {
+        assertAll(
+                () -> assertEquals(Stream.of(versions).map(ComparableVersion::new).sorted().map(ComparableVersion::toString).toList(), List.of(versions), "Maven order is correct"),
+                () -> assertEquals(Stream.of(versions).map(VersionNumber::new).sorted().map(VersionNumber::toString).toList(), List.of(versions), "Jenkins order is correct"));
     }
 
-    @Ignore("TODO still pretty divergent: …was <[2.0.ea, 2.0.0, 2.0, 2.0.1-alpha-1, 2.0.1-SNAPSHOT, 2.0.*, 2.0.0.99, 2.0.1-alpha-1-rc9999.abc123def456, 2.0.1-rc9999.abc123def456, 2.0.1]>")
+    @Disabled("TODO still pretty divergent: …was <[2.0.ea, 2.0.0, 2.0, 2.0.1-alpha-1, 2.0.1-SNAPSHOT, 2.0.*, 2.0.0.99, 2.0.1-alpha-1-rc9999.abc123def456, 2.0.1-rc9999.abc123def456, 2.0.1]>")
     @Issue("JENKINS-51594")
     @Test
-    public void mavenComparison() {
+    void mavenComparison() {
         assertOrderAlsoInMaven("2.0.0", "2.0", "2.0.*", "2.0.ea", "2.0.0.99", "2.0.1-alpha-1-rc9999.abc123def456", "2.0.1-alpha-1", "2.0.1-rc9999.abc123def456", "2.0.1-SNAPSHOT", "2.0.1");
     }
 
     @Issue("https://github.com/jenkinsci/commons-lang3-api-plugin/pull/21")
     @Test
-    public void libraryWrapper() {
+    void libraryWrapper() {
         assertOrderAlsoInMaven("3.12.0.0", "3.12.0-44.v1234deadbeef", "3.12.0-55.v1234deadbeef", "3.12.1-66.v1234deadbeef");
     }
 
     @Issue("JEP-229")
     @Test
-    public void backportJep229() {
+    void backportJep229() {
         // Maven considers 99.1.abcd1234abcd to sort before 99.1234deadbeef so we cannot simply use 99. as the branch prefix.
         // Nor can we use 99.1234deadbeef. as the prefix because Maven would compare 5 and 10 lexicographically.
         // 100._. seems to work but is not intuitive.
@@ -147,7 +144,7 @@ public class VersionNumberTest {
 
     @Issue("https://github.com/jenkinsci/incrementals-tools/issues/29")
     @Test
-    public void majorVersion() {
+    void majorVersion() {
         assertOrderAlsoInMaven("1.1", "391.ve4a_38c1b_cf4b_");
         // Weird but TBD if this matters in practice:
         assertEquals(0, new DefaultArtifactVersion("391.ve4a_38c1b_cf4b_").getMajorVersion());
@@ -157,7 +154,7 @@ public class VersionNumberTest {
     }
 
     @Test
-    public void testOrEqualTo() {
+    void testOrEqualTo() {
         assertTrue(new VersionNumber("1.8").isNewerThanOrEqualTo(new VersionNumber("1.8")));
         assertTrue(new VersionNumber("1.9").isNewerThanOrEqualTo(new VersionNumber("1.8")));
         assertTrue(new VersionNumber("2").isNewerThanOrEqualTo(new VersionNumber("1.8")));
